checkpatch-results/home/fedora/lkml-analysis/lkml/1/0000088810.e10aeb39c1d3567f1906ca36162c977c1b7c0672
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#37: 
> > Gitweb:     http://git.kernel.org/tip/ee6a28296de295d62a3d8fad8bab58a8a48d006f

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#47: 
> arch/x86/kernel/apic/apic.c: In function ‘enable_IR_x2apic’:
                                           ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#48: 
> arch/x86/kernel/apic/apic.c:1431: error: ‘x2apic_phys’ undeclared (first use in this function)
                                           ^

CHECK:LINE_SPACING: Please use a blank line after function/struct/union/enum declarations
#76: FILE: arch/x86/include/asm/apic.h:201:
 }
+static inline void x2apic_force_phys()

Vertical space is wasted given the limited number of lines an
editor window can display when multiple blank lines are used.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:FUNCTION_WITHOUT_ARGS: Bad function definition - void x2apic_force_phys() should probably be void x2apic_force_phys(void)
#76: FILE: arch/x86/include/asm/apic.h:201:
+static inline void x2apic_force_phys()

Function declarations without arguments like::

  int foo()

should be::

  int foo(void)

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000088810.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 total: 1 errors, 1 warnings, 3 checks, 27 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.JOzjvdpBcb//home/fedora/lkml-analysis/lkml/1/patch.offset.0000088810.commit.e10aeb39c1d3567f1906ca36162c977c1b7c0672 has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
